# 5xbank

./: .gitignore  README.md  過程.md
backend/: Dockerfile  config.py  data.csv  import_data.py  main.py  model.py  models.py  pyproject.toml  serializers.py
backend/instance/: mydatabase.db
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  BankSearch.css  BankSearch.jsx  index.css
