[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["x10akd <x10akd@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^4.0.1"
flask-marshmallow = "^1.2.1"
marshmallow = "^3.21.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
